# advent-of-code

./: .clang-format  .gitignore  README.md
2015/: day1.java  day1_part1.java  day1_part2.java
2018/: Cargo.toml  day1-part1.py  day1-part2.py  day1_part1.py  day1_part2.py
2018/src/: day19_part1.rs  day1_part1.rs  day1_part1_bench.rs  day1_part2.rs  day1_part2_bench.rs  day2_part1.rs  day2_part2.rs  day5_part1.rs  day5_part2.rs
2018/src/commonalities/: cpu.rs
2022/: day1-part1.cpp  day1-part2.cpp  day10_part1.cpp  day1_part1.cpp  day1_part2.cpp  day2-part1.cpp  day2-part2.cpp  day2_part1.cpp  day2_part2.cpp  day3_part1.cpp  day3_part2.cpp  day4_part1.cpp  day4_part2.cpp  day5_part1.cpp  day6_part1.cpp  day6_part2.cpp  day7_part1.cpp
2023/: CMakeLists.txt  day1-part1.py  day15-part1.py  day15_part1.py  day15_part2.py  day19_part1.py  day1_part2.py  day2-part1.py  day2-part2.py  day24_part1.py  day24_part2.py  day2_part1.py  day2_part2.py  day4-part1.py  day4_part1.py  day4_part2.py  day6_part1.py  day6_part2.py  day6_part2_helper.cpp
2023/inputs/: day6.txt
2023/src/: day6_part2_helper.cpp  day6_part2_helper.hpp  day6_part2_helper_alt.cpp
2024/: Cargo.toml
2024/src/: day11_part1.rs  day17_part1.rs  day1_part1.rs  day1_part2.rs  day22_part1.rs  day2_part1.rs  day2_part2.rs  day2_part2_bench.rs  day3_part1.rs  day3_part1_bench.rs  day3_part2.rs  day3_part2_bench.rs  day4_part1.rs  day4_part2.rs
hooks/: count.py
