[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1_part1"
path = "src/day1_part1.rs"

[[bin]]
name = "day1_part2"
path = "src/day1_part2.rs"

[[bin]]
name = "day2_part1"
path = "src/day2_part1.rs"

[[bin]]
name = "day2_part2"
path = "src/day2_part2.rs"

[[bin]]
name = "day2_part2_bench"
path = "src/day2_part2_bench.rs"

[[bin]]
name = "day3_part1"
path = "src/day3_part1.rs"

[[bin]]
name = "day3_part1_bench"
path = "src/day3_part1_bench.rs"

[[bin]]
name = "day3_part2"
path = "src/day3_part2.rs"

[[bin]]
name = "day3_part2_bench"
path = "src/day3_part2_bench.rs"

[[bin]]
name = "day4_part1"
path = "src/day4_part1.rs"

[[bin]]
name = "day4_part2"
path = "src/day4_part2.rs"

[[bin]]
name = "day7_part1"
path = "src/day7_part1.rs"

[[bin]]
name = "day11_part1"
path = "src/day11_part1.rs"

[[bin]]
name = "day17_part1"
path = "src/day17_part1.rs"

[[bin]]
name = "day22_part1"
path = "src/day22_part1.rs"

[dependencies]
regex = "1.11.1"
